--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Are Meme Coins worth trading in 2025? 💰</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">22 minutes ago</div>
+                        <div class="date">42 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Rate ArthurTV's Irish Accent🇮🇪😂</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">52 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Arthur Broke Character For The First Time!😳💀</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>60,000€ Profit and All my Strategies are FREE (Download Link)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Profitable Traders Have This In Common...</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Larry Connors 3 Day High Low Strategy (Rules and Backtest)</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Vikkstar & Tobi on World’s Most Expensive Road Trip 🤯</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Doing the Real Work for Your Inner Evolution</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Are You a Lover or a Fixer? | Sadhgury</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>My Italian Pizza Set up for Caterings</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -486,7 +486,7 @@
                     <div class="video-info">
                         <h3>Cheesy garlic dough bites, baked in the Ooni volt2 these are my fave! #pizza #oonipizzaoven @OoniHQ</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -827,7 +827,7 @@
                     <div class="video-info">
                         <h3>Should you trade Crypto? Here's the truth</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2712,7 +2712,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Right Now (Lyric Video)</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Nov 02, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Are Meme Coins worth trading in 2025? 💰</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">22 minutes ago</div>
+                            <div class="date">42 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5776,7 +5776,7 @@
                         <div class="video-info">
                             <h3>60,000€ Profit and All my Strategies are FREE (Download Link)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5787,7 +5787,7 @@
                         <div class="video-info">
                             <h3>Profitable Traders Have This In Common...</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5798,7 +5798,7 @@
                         <div class="video-info">
                             <h3>Larry Connors 3 Day High Low Strategy (Rules and Backtest)</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5897,7 +5897,7 @@
                         <div class="video-info">
                             <h3>Should you trade Crypto? Here's the truth</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Doing the Real Work for Your Inner Evolution</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7920,7 +7920,7 @@
                         <div class="video-info">
                             <h3>Are You a Lover or a Fixer? | Sadhgury</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9406,7 +9406,7 @@
                         <div class="video-info">
                             <h3>My Italian Pizza Set up for Caterings</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9461,7 +9461,7 @@
                         <div class="video-info">
                             <h3>Cheesy garlic dough bites, baked in the Ooni volt2 these are my fave! #pizza #oonipizzaoven @OoniHQ</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>Rate ArthurTV's Irish Accent🇮🇪😂</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">52 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10243,7 +10243,7 @@
                         <div class="video-info">
                             <h3>Arthur Broke Character For The First Time!😳💀</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Vikkstar & Tobi on World’s Most Expensive Road Trip 🤯</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10980,7 +10980,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Right Now (Lyric Video)</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Nov 02, 2025</div>
                         </div>
                     </a>
                 </div>
