--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN GTA: BEAT THE CHASER</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">6 minutes ago</div>
+                        <div class="date">21 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 02.12.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 02.12.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>How Your Posture Affects You | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Baking my pizzas with tread Gozney #pizza #gozney #treadgozney#deliciouspizza #pizza 🍕</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Master Cavatelli in Minutes! juliansisofo.com #pasta #freshpasta #food #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -937,7 +937,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US BUT HALF THE LOBBY ARE JESTERS</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5754,7 +5754,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 02.12.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5765,7 +5765,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 02.12.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5809,7 +5809,7 @@
                         <div class="video-info">
                             <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7909,7 +7909,7 @@
                         <div class="video-info">
                             <h3>How Your Posture Affects You | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9395,7 +9395,7 @@
                         <div class="video-info">
                             <h3>Baking my pizzas with tread Gozney #pizza #gozney #treadgozney#deliciouspizza #pizza 🍕</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9417,7 +9417,7 @@
                         <div class="video-info">
                             <h3>Master Cavatelli in Minutes! juliansisofo.com #pasta #freshpasta #food #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10232,7 +10232,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN GTA: BEAT THE CHASER</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">6 minutes ago</div>
+                            <div class="date">21 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10518,7 +10518,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US BUT HALF THE LOBBY ARE JESTERS</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
