--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
     
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=iVCgvG0oRh0" target="_blank">
-                    <img src="https://i.ytimg.com/vi/iVCgvG0oRh0/mqdefault.jpg" alt="SIDEMEN GTA: BEAT THE CHASER">
+                    <img src="https://i.ytimg.com/vi/iVCgvG0oRh0/mqdefault.jpg" alt="SIDEMEN BEAT THE CHASER: GTA EDITION">
                     <div class="video-info">
-                        <h3>SIDEMEN GTA: BEAT THE CHASER</h3>
+                        <h3>SIDEMEN BEAT THE CHASER: GTA EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Why People Can’t Be Alone Anymore | Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Are Meme Coins worth trading in 2025? 💰</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Worth it I reckon #arthurhill #shorts</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -838,7 +838,7 @@
                     <div class="video-info">
                         <h3>I went Christmas Shopping...</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5743,7 +5743,7 @@
                         <div class="video-info">
                             <h3>Are Meme Coins worth trading in 2025? 💰</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7898,7 +7898,7 @@
                         <div class="video-info">
                             <h3>Why People Can’t Be Alone Anymore | Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,11 +10228,11 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=iVCgvG0oRh0" target="_blank">
-                        <img src="https://i.ytimg.com/vi/iVCgvG0oRh0/mqdefault.jpg" alt="SIDEMEN GTA: BEAT THE CHASER">
+                        <img src="https://i.ytimg.com/vi/iVCgvG0oRh0/mqdefault.jpg" alt="SIDEMEN BEAT THE CHASER: GTA EDITION">
                         <div class="video-info">
-                            <h3>SIDEMEN GTA: BEAT THE CHASER</h3>
+                            <h3>SIDEMEN BEAT THE CHASER: GTA EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10265,7 +10265,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Worth it I reckon #arthurhill #shorts</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10485,7 +10485,7 @@
                         <div class="video-info">
                             <h3>I went Christmas Shopping...</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
